2018-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (WriteImage): Produce a more useful error
	message if an encoding delegate is not available.

	* magick/nt_base.h (isnan): Try adding a MSVC replacement for
	missing isnan() function.  Not yet tested.

2018-08-25  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c This should fix intentional 64 bit file offset
	overflow as depictedin OSS-fuzz-9936. Thanks to OSS-Fuzz.

2018-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPrimitiveToPath): Need to enlarge
	PathInfo array allocation to avoid possible heap write overflow.
	Fixes oss-fuzz 9651 "graphicsmagick/coder_MVG_fuzzer:
	Heap-buffer-overflow in ConvertPrimitiveToPath". (Credit to
	OSS-Fuzz)

2018-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpc.c (ReadMPCImage): Insist that the format be
	identified prior to any comment, and that there is only one
	comment.

	* coders/miff.c (ReadMIFFImage): Insist that the format be
	identified prior to any comment, and that there is only one
	comment.  Fixes oss-fuzz 9979 "graphicsmagick/coder_MIFF_fuzzer:
	Timeout in graphicsmagick_coder_MIFF_fuzzer".  This is not a
	serious issue, but the code runs slowly under UBSAN.  (Credit to
	OSS-Fuzz)

2018-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickAtoFChk): Add additional validation
	checks for floating point values.  NAN and +/- INFINITY values
	also map to 0.0. Fixes oss-fuzz 9630
	"graphicsmagick/coder_MVG_fuzzer: Integer-overflow in
	IsNexusInCore" and oss-fuzz 9612 "graphicsmagick/coder_MVG_fuzzer:
	Integer-overflow in SetCacheNexus". (Credit to OSS-Fuzz)

	* magick/render.c (DrawImage): Add missing error-reporting logic
	to return immediately upon memory reallocation failure.  Apply
	memory resource limits to PrimitiveInfo array allocation.  Fixes
	oss-fuzz 9576 "graphicsmagick/coder_MVG_fuzzer: Null-dereference
	READ in DrawImage", oss-fuzz 9593