@@ -38,6 +38,11 @@
 <p>2018-08-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawImage): Be more precise about error
+detection and reporting, and return from an error more quickly.
+Also added MAX_DRAWIMAGE_RECURSION pre-processor definition to
+allow adjusting the drawing recursion limit.  The drawing
+recursion limit is still 100, which seems exceptionally generous.</li>
 <li>magick/constitute.c (WriteImage): Produce a more useful error
 message if an encoding delegate is not available.</li>
 <li>magick/nt_base.h (isnan): Try adding a MSVC replacement for
